# stream-hub

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: hub.yaml  streams.yaml
docs/: .$workflow.drawio.bkp  workflow.drawio
stream_hub/: main.py
stream_hub/configs/: hub.yaml  streams.yaml
stream_hub/ingestion/: capture_worker.py  frame_encoder.py  stream_manager.py  stream_worker_process.py
stream_hub/network/: proxy.py  zmq_handler.py
stream_hub/schemas/: metadata.py  packet.py
stream_hub/utils/: latency_logger.py  logger.py  utils.py
utils/: generate_env.py
